# aletheia-trader

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  OPERATIONAL_STATUS.md  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_system.sh  start.sh
.streamlit/: config.toml
agents/: __init__.py  crypto_agent.py  forex_agent.py  market_watcher.py  options_agent.py  signal_engine.py
api/: __init__.py  server.py
audit/: __init__.py  aletheia_wrapper.py
backtesting/: __init__.py  data.py  engine.py  examples.md  run.py  strategies.py
brokers/: __init__.py  alpaca_broker.py  broker_factory.py  db.py  instrument_specs.py  ledger_db.py  ledger_migration.py  order_executor.py  paper_forex.py  paper_options.py  profit_calculator.py  signal_and_order_ledger.py  simulator.py
core/: __init__.py  aletheia_guard.py
dashboard/: app.py  app_enhanced.py
data/: approved_orders.json  pending_signals.json
market_watcher/: __init__.py  alerts.py  candlestick_tracker.py  data_feeds.py  orchestrator.py  regime_detector.py  run.py  signal_generator.py  ticker.py
policies/: trading_policy.json
risk/: __init__.py  breach_tracker.py  manager.py
scripts/: backtest.py  ensure_ci.sh  run_trader.sh  watch_ci.sh
tests/: test_agent_data_outage.py  test_alpaca_broker.py  test_backtesting_engine.py  test_data_manager.py  test_database_ledger.py  test_live_execution_risk.py  test_market_watcher.py  test_market_watcher_components.py  test_pnl_accounting.py  test_profit_calculator.py  test_risk_manager.py  (+1 more)
(+10 files in other folders)
