[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "api", "audit", "backtesting", "brokers", "dashboard", "risk", "scripts"]

[project]
name = "aletheia-trader"
version = "1.0.1"
description = "Human-in-the-loop paper trading system with audit receipts and FastAPI + Streamlit interfaces."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Aletheia Maintainers" }
]
keywords = ["trading", "paper-trading", "fastapi", "streamlit", "audit", "aletheia"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
  "Framework :: AsyncIO",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["data", "docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
exclude = ["^data/"]

[[tool.mypy.overrides]]
module = ["yfinance", "streamlit", "streamlit_autorefresh", "requests"]
ignore_missing_imports = true
